[scheduler] Fix ThreadControllerImpl::DoWork trace event.

Replace ThreadControllerImpl:DoWork which has strange scope with
ThreadControllerImpl::DoWork with batch-level scope and
ThreadControllerImpl::RunTask with task-level scope.

R=skyostil@chromium.org
BUG=871204

Change-Id: Ifdf410b552143b3e0b9c603ed0ded5f621c3ea5f
Reviewed-on: https://chromium-review.googlesource.com/1163611
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581244}
Former-commit-id: d2e82c61666a4be7c5232424d0aab8da01100855