base/task/sequence_manager/thread_controller_impl.cc
@@ -146,6 +146,8 @@ void ThreadControllerImpl::WillQueueTask(PendingTask* pending_task) {
 }
 
 void ThreadControllerImpl::DoWork(WorkType work_type) {
+  TRACE_EVENT0("sequence_manager", "ThreadControllerImpl::DoWork");
+
   DCHECK_CALLED_ON_VALID_SEQUENCE(associated_thread_->sequence_checker);
   DCHECK(sequence_);
 
@@ -165,8 +167,10 @@ void ThreadControllerImpl::DoWork(WorkType work_type) {
     if (!task)
       break;
 
-    TRACE_TASK_EXECUTION("ThreadControllerImpl::DoWork", *task);
-    task_annotator_.RunTask("ThreadControllerImpl::DoWork", &*task);
+    {
+      TRACE_TASK_EXECUTION("ThreadControllerImpl::RunTask", *task);
+      task_annotator_.RunTask("ThreadControllerImpl::RunTask", &*task);
+    }
 
     if (!weak_ptr)
       return;
